Add RankProfileInputProperties